# routing-with-encoded-slash

./: .gitignore
django/: README.md  pyproject.toml
django/app/: settings.py  urls.py
django/products/: urls.py  views.py
dotNet/: Program.cs  REAME.md
dotNet/Controllers/: ProductController.cs
fastapi/: README.md  pyproject.toml
fastapi/app/: main.py
flask/: README.md  app.py  pyproject.toml
node/: .npmrc  README.md  app-express.js  app-fastify.js  package.json  pnpm-lock.yaml
rust/: Cargo.toml  README.md
rust/src/: main.rs
spring/: README.md  pom.xml
spring/src/main/java/com/example/products/: ProductsApplication.java
spring/src/main/java/com/example/products/controller/: ProductsController.java
