[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "A simple routing test with Django"
authors = ["Patrizio Bertozzi <xpicio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"