[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "A simple routing test with FastAPI"
authors = ["Patrizio Bertozzi <xpicio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "0.115.5"
uvicorn = "0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
